--- a/README.Rmd
+++ b/README.Rmd
@@ -23,24 +23,32 @@ The goal of cdgd is to implement the causal decomposition of group disparities o
 You can install the development version of cdgd from [GitHub](https://github.com/) with:
 
 ``` {r}
-# install.packages("devtools")
 devtools::install_github("ang-yu/cdgd")
 ```
 
 ## Example 
-
-This is a basic example which shows you how to solve a common problem:
   
 ```{r example}
 library(cdgd)
 
+# simulated example data
 head(exp_data)
+```
 
+# Use cdgd0 to get point estimates
+
+```{r point}
 set.seed(1)
 results0 <- cdgd0(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confounder","Q"),Q="Q",data=exp_data,t=0.05,algorithm="nnet")
 
 results0
 ```
 
+# Use cdgd to get point estimates and confidence intervals. Will take a minute or so. 
 
+```{r CI}
+set.seed(1)
+results <- cdgd(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confounder","Q"),Q="Q",data=exp_data,t=0.05,algorithm="nnet",alpha=0.05,k=20)
 
+results
+```
