with new example data

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,9 +20,7 @@ The goal of cdgd is to implement the causal decomposition of group disparities o
 
 ## Installation
 
-You can install the development version of cdgd from [GitHub](https://github.com/) with:
-
-``` {r}
+``` {r, results = FALSE, message = FALSE}
 devtools::install_github("ang-yu/cdgd")
 ```
 
@@ -32,10 +30,11 @@ devtools::install_github("ang-yu/cdgd")
 library(cdgd)
 
 # simulated example data
+data(exp_data)
 head(exp_data)
 ```
 
-# Use cdgd0 to get point estimates
+### Use cdgd0 to get point estimates
 
 ```{r point}
 set.seed(1)
@@ -44,7 +43,7 @@ results0 <- cdgd0(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confo
 results0
 ```
 
-# Use cdgd to get point estimates and confidence intervals. Will take a minute or so. 
+### Use cdgd to get point estimates and confidence intervals. Will take a minute or so. 
 
 ```{r CI}
 set.seed(1)
