minor text edit

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,9 +43,11 @@ results0 <- cdgd0(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confo
 results0
 ```
 
-### Use cdgd to get point estimates and confidence intervals. Will take a minute or so. 
+### Use cdgd to get point estimates and confidence intervals. 
 
 ```{r CI}
+# This may take a minute or so.
+
 set.seed(1)
 results <- cdgd(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confounder","Q"),Q="Q",data=exp_data,t=0.05,algorithm="nnet",alpha=0.05,k=20)
 
