change the t parameter from actual value to quantitle

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ devtools::install_github("ang-yu/cdgd")
 ```{r example}
 library(cdgd)
 
-# simulated example data
+# load the simulated example data
 data(exp_data)
 head(exp_data)
 ```
