--- a/README.Rmd
+++ b/README.Rmd
@@ -34,22 +34,18 @@ data(exp_data)
 head(exp_data)
 ```
 
-### Use cdgd0 to get point estimates
+### Use cdgd0_ml or cdgd0_pa to get unconditional decomposition
 
-```{r point}
-set.seed(1)
-results0 <- cdgd0(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confounder","Q"),Q="Q",data=exp_data,t=0.05,algorithm="nnet")
+```{r unconditional}
+results0 <- cdgd0_pa(Y="outcome",D="treatment",G="group_a",X=c("confounder","Q"),data=exp_data,alpha=0.05)
 
-results0
+results0$results
 ```
 
-### Use cdgd to get point estimates and confidence intervals. 
+### Use cdgd1_ml or cdgd1_pa to get conditional decomposition 
 
-```{r CI}
-# This may take a minute or so.
+```{r conditional}
+results1 <- cdgd1_pa(Y="outcome",D="treatment",G="group_a",X="confounder",Q="Q",data=exp_data,alpha=0.05)
 
-set.seed(1)
-results <- cdgd(Y="outcome",D="treatment",G1="group_a",G2="group_b",X=c("confounder","Q"),Q="Q",data=exp_data,t=0.05,algorithm="nnet",alpha=0.05,k=20)
-
-results
+results1
 ```
