--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of cdgd is to implement the causal decomposition of group disparities o
 devtools::install_github("ang-yu/cdgd")
 ```
 
-## Example 
+## Examples 
   
 ```{r example}
 library(cdgd)
@@ -34,7 +34,7 @@ data(exp_data)
 head(exp_data)
 ```
 
-### Use cdgd0_ml or cdgd0_pa to get unconditional decomposition
+### Use cdgd0_ml, cdgd0_pa, or cdgd0_manual to get unconditional decomposition
 
 ```{r unconditional}
 results0 <- cdgd0_pa(Y="outcome",D="treatment",G="group_a",X=c("confounder","Q"),data=exp_data,alpha=0.05)
@@ -42,7 +42,7 @@ results0 <- cdgd0_pa(Y="outcome",D="treatment",G="group_a",X=c("confounder","Q")
 results0$results
 ```
 
-### Use cdgd1_ml or cdgd1_pa to get conditional decomposition 
+### Use cdgd1_ml, cdgd1_pa, or cdgd1_manual to get conditional decomposition 
 
 ```{r conditional}
 results1 <- cdgd1_pa(Y="outcome",D="treatment",G="group_a",X="confounder",Q="Q",data=exp_data,alpha=0.05)
