--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ data(exp_data)
 head(exp_data)
 ```
 
-### Use cdgd0_ml, cdgd0_pa, or cdgd0_manual to get unconditional decomposition
+### Use cdgd0_ml, cdgd0_pa, or cdgd0_manual for unconditional decomposition
 
 ```{r unconditional}
 results0 <- cdgd0_pa(Y="outcome",D="treatment",G="group_a",X=c("confounder","Q"),data=exp_data,alpha=0.05)
@@ -42,7 +42,7 @@ results0 <- cdgd0_pa(Y="outcome",D="treatment",G="group_a",X=c("confounder","Q")
 round(results0$results, 4)
 ```
 
-### Use cdgd1_ml, cdgd1_pa, or cdgd1_manual to get conditional decomposition 
+### Use cdgd1_ml, cdgd1_pa, or cdgd1_manual for conditional decomposition 
 
 ```{r conditional}
 results1 <- cdgd1_pa(Y="outcome",D="treatment",G="group_a",X="confounder",Q="Q",data=exp_data,alpha=0.05)
