--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 # cdgd
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of cdgd is to implement the causal decomposition of group disparities of Yu and Elwert (2023).
