--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of cdgd is to implement the causal decompositions of group disparities developed by Yu and Elwert (2023).
+The goal of cdgd is to implement the causal decompositions of group disparities in [Yu and Elwert (2023)](https://ang-yu.github.io/files/Causal_Decomposition_of_Group_Disparities_2023.pdf).
 
 ## Installation
 
