--- a/README.Rmd
+++ b/README.Rmd
@@ -13,15 +13,23 @@ knitr::opts_chunk$set(
 
 # cdgd
 
-<!-- badges: start -->
 [![R-CMD-check](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ang-yu/cdgd/actions/workflows/R-CMD-check.yaml)
-<!-- badges: end -->
+![CRAN Downloads overall](http://cranlogs.r-pkg.org/badges/grand-total/cdgd)
+
 
 The goal of cdgd is to implement the causal decompositions of group disparities in [Yu and Elwert (2023)](https://ang-yu.github.io/files/Causal_Decomposition_of_Group_Disparities_2023.pdf).
 
 ## Installation
 
-``` {r, results = FALSE, message = FALSE}
+The latest release of the package can be installed through CRAN:
+
+```R
+install.packages("cdgd",repos = "http://cran.us.r-project.org")
+```
+
+The current development version can be installed from source using devtools.
+
+```R
 devtools::install_github("ang-yu/cdgd")
 ```
 
