--- a/README.Rmd
+++ b/README.Rmd
@@ -21,10 +21,10 @@ The goal of cdgd is to implement the causal decompositions of group disparities 
 
 ## Installation
 
-The latest release of the package can be installed through CRAN:
+The latest release of the package can be installed through CRAN.
 
 ```R
-install.packages("cdgd",repos = "http://cran.us.r-project.org")
+install.packages("cdgd")
 ```
 
 The current development version can be installed from source using devtools.
